// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work 1`] = `
[
  {
    "context": "context",
    "data": "data",
    "id": "foo",
    "name": "name",
    "view": [
      "some-ui",
    ],
  },
  {
    "context": "context2",
    "data": "data2",
    "id": "foo2",
    "name": "name2",
    "view": [
      "some-ui2",
    ],
  },
  {
    "context": "context3",
    "data": "data3",
    "id": "foo3",
    "name": "name3",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui3",
    ],
  },
  {
    "context": "context4",
    "data": "data4",
    "id": "foo4",
    "name": "name4",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui4",
    ],
  },
  {
    "context": "context5",
    "data": "data5",
    "id": "foo5",
    "name": "name5",
    "relations": [
      {
        "id": "bar",
        "type": "module",
      },
    ],
    "view": [
      "some-ui5",
    ],
  },
  {
    "context": "context6",
    "data": "data6",
    "id": "foo6",
    "name": "name6",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui6",
    ],
  },
]
`;

exports[`should work 2`] = `
[
  {
    "context": "context3",
    "data": "data3",
    "id": "foo3",
    "name": "name3",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui3",
    ],
  },
  {
    "context": "context4",
    "data": "data4",
    "id": "foo4",
    "name": "name4",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui4",
    ],
  },
  {
    "context": "context5",
    "data": "data5",
    "id": "foo5",
    "name": "name5",
    "relations": [
      {
        "id": "bar",
        "type": "module",
      },
    ],
    "view": [
      "some-ui5",
    ],
  },
]
`;

exports[`should work 3`] = `
[
  {
    "context": "context3",
    "data": "data3",
    "id": "foo3",
    "name": "name3",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui3",
    ],
  },
  {
    "context": "context4",
    "data": "data4",
    "id": "foo4",
    "name": "name4",
    "relations": [
      {
        "id": "foo",
        "type": "module",
      },
    ],
    "view": [
      "some-ui4",
    ],
  },
]
`;

exports[`should work 4`] = `
[
  {
    "context": "context5",
    "data": "data5",
    "id": "foo5",
    "name": "name5",
    "relations": [
      {
        "id": "bar",
        "type": "module",
      },
    ],
    "view": [
      "some-ui5",
    ],
  },
]
`;

exports[`should work 5`] = `
[
  {
    "context": "context6",
    "data": "data6",
    "id": "foo6",
    "name": "name6",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui6",
    ],
  },
]
`;

exports[`should work 6`] = `
[
  {
    "context": "context6",
    "data": "data6",
    "id": "foo6",
    "name": "name6",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui6",
    ],
  },
]
`;

exports[`should work 7`] = `
[
  {
    "compilation": "foo-compilation",
    "context": "context7",
    "data": "data7",
    "id": "foo7",
    "name": "name7",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui7",
    ],
  },
]
`;

exports[`should work 8`] = `
[
  {
    "compilation": "foo-compilation",
    "context": "context7",
    "data": "data7",
    "id": "foo7",
    "name": "name7",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui7",
    ],
  },
]
`;

exports[`should work 9`] = `
[
  {
    "compilation": "foo-compilation",
    "context": "context7",
    "data": "data7",
    "id": "foo7",
    "name": "name7",
    "relations": [
      {
        "id": "foo",
        "type": "chunk",
      },
    ],
    "view": [
      "some-ui7",
    ],
  },
]
`;

exports[`should work 10`] = `
{
  "context": "context",
  "data": "data",
  "id": "foo",
  "name": "name",
  "view": [
    "some-ui",
  ],
}
`;

exports[`should work 11`] = `
{
  "context": "context2",
  "data": "data2",
  "id": "foo2",
  "name": "name2",
  "view": [
    "some-ui2",
  ],
}
`;
